<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@drawable/updatel">


    <EditText

        android:id="@+id/referencenic"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/blue_border"
        android:hint="@string/enter_employee_nic"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/green"
        tools:ignore="RtlCompat"

         />

    <EditText

        android:id="@+id/updateempolyeename"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/blue_border"
        android:hint="@string/enter_empolyee_name"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/green"
        tools:ignore="RtlCompat" />





    <EditText
        android:id="@+id/updatenumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/blue_border"
        android:hint="@string/enter_phone_number"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/green"
        tools:ignore="RtlCompat" />


    <EditText
        android:id="@+id/updateemployeefield"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/blue_border"
        android:hint="@string/enter_employee_field"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/green"
        tools:ignore="RtlCompat" />


    <Button
        android:id="@+id/mainUpdate"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/update"
        android:textSize="18sp" />

</LinearLayout>

