<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/adminl"
    android:gravity="bottom"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- First existing button -->
        <Button
            android:id="@+id/mainUpload"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!-- Update button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainupdate"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/updatekjn"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/blue"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <!-- New button -->
        <Button
            android:id="@+id/mainSearch"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/searchk"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
